--- a/projects/crypto-currency/destemidos/Api/package.json
+++ b/projects/crypto-currency/destemidos/Api/package.json
@@ -1,6 +1,21 @@
 {
   "dependencies": {
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "corss": "^2.8.5",
     "express": "^4.17.1"
-  }
+  },
+  "name": "api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  },
+  "scripts": {
+    "start": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
