--- a/projects/crypto-currency/destemidos/Api/package.json
+++ b/projects/crypto-currency/destemidos/Api/package.json
@@ -8,9 +8,11 @@
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "devDependencies": {
     "nodemon": "^2.0.12"
   },
+
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
