feature: registering users in the bank

--- a/projects/crypto-currency/destemidos/Api/package.json
+++ b/projects/crypto-currency/destemidos/Api/package.json
@@ -2,8 +2,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cors": "^2.8.5",
-    "corss": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^4.0.1",
     "mongoose": "^5.13.3"
   },
   "name": "api",
