--- a/projects/crypto-currency/iluminados/api/package.json
+++ b/projects/crypto-currency/iluminados/api/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.10",
     "mongoose": "^5.13.3"
