--- a/projects/crypto-currency/iluminados/api/package.json
+++ b/projects/crypto-currency/iluminados/api/package.json
@@ -14,11 +14,17 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.2",
+    "helmet": "^4.6.0",
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.10",
-    "mongoose": "^5.13.3"
+    "mongoose": "^5.13.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
