--- a/projects/crypto-currency/iluminados/app/package.json
+++ b/projects/crypto-currency/iluminados/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,6 +13,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-use-auth": "^2.1.0-14",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2",
     "yarn": "^1.22.11"
