--- a/projects/crypto-currency/destemidos/Api/package.json
+++ b/projects/crypto-currency/destemidos/Api/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.0.1",
     "mongoose": "^5.13.3"
   },
