--- a/projects/crypto-currency/iluminados/api/package.json
+++ b/projects/crypto-currency/iluminados/api/package.json
@@ -24,6 +24,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "jwt-redis": "^6.0.0",
+    "logout": "^1.0.2",
     "mongodb": "^3.6.10",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0"
