--- a/projects/generic-trello/superman/api/package.json
+++ b/projects/generic-trello/superman/api/package.json
@@ -2,11 +2,16 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongodb": "^4.1.0",
+    "mongoose": "^5.13.7",
     "nodemon": "^2.0.12"
   },
+  "type": "module",
   "devDependencies": {},
   "scripts": {
     "start": "nodemon src/app.js",
