--- a/projects/generic-trello/superman/api/package.json
+++ b/projects/generic-trello/superman/api/package.json
@@ -14,7 +14,7 @@
   "type": "module",
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon src/app.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
