--- a/projects/generic-trello/batman/api/package.json
+++ b/projects/generic-trello/batman/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./src/server.js"
+    "start": "nodemon ./src/server.js",
+    "swagger-autogen": "node ./src/swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
+    "swagger-autogen": "^2.11.2",
+    "swagger-ui-express": "^4.1.6",
     "yup": "^0.32.9"
   },
   "devDependencies": {
