--- a/projects/generic-trello/batman/app/package.json
+++ b/projects/generic-trello/batman/app/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "immer": "^9.0.5",
     "axios": "^0.21.1",
+    "immer": "^9.0.5",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dnd": "^11.1.3",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.12"
   }
 }
