--- a/projects/generic-trello/superman/api/package.json
+++ b/projects/generic-trello/superman/api/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -12,13 +13,17 @@
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
     "nodemon": "^2.0.12",
+    "swagger-ui-express": "^4.1.6",
     "yup": "^0.32.9"
   },
   "type": "module",
-  "devDependencies": {},
+  "devDependencies": {
+    "swagger-autogen": "^2.11.2"
+  },
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "swagger-autogen": "node ./routes/configs/swagger.js"
   },
   "keywords": [],
   "author": "",
