--- a/projects/generic-trello/batman/app/package.json
+++ b/projects/generic-trello/batman/app/package.json
@@ -17,6 +17,7 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.14.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
