Criação do Projeto
O que foi feito?

*Adicionado os frameworks que serão utilizados no projeto.
*Criação das pastas para organização do projeto.
*Criação da rota de registro de soldados

--- a/final-projects/Renato/package.json
+++ b/final-projects/Renato/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon .src/server.js"
+    "start": "nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +21,8 @@
     "swagger-autogen": "^2.11.2",
     "swagger-ui-express": "^4.1.6",
     "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
