--- a/final-projects/alisson-perim-honostorio/package.json
+++ b/final-projects/alisson-perim-honostorio/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsnd src/server.ts"
+    "start": "tsnd --files src/server.ts"
   },
   "keywords": [],
   "author": "",
