--- a/final-projects/lucas-barbosa/package.json
+++ b/final-projects/lucas-barbosa/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
-    "xlsx": "^0.17.1"
+    "xlsx": "^0.17.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
