--- a/final-projects/lucas-barbosa/package.json
+++ b/final-projects/lucas-barbosa/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.1",
+    "mongoose": "^6.0.5",
     "xlsx": "^0.17.1",
     "yup": "^0.32.9"
   },
