--- a/final-projects/alisson-perim-honostorio/package.json
+++ b/final-projects/alisson-perim-honostorio/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsnd --files src/server.ts"
+    "start": "tsnd --files src/server.ts",
+    "swagger-autogen": "tsnd src/swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.5",
+    "swagger-autogen": "^2.11.2",
+    "swagger-ui-express": "^4.1.6",
     "typescript": "^4.4.2",
     "yarn": "^1.22.11",
     "yup": "^0.32.9"
