--- a/final-projects/lucas-barbosa/package.json
+++ b/final-projects/lucas-barbosa/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.5",
+    "validations-br": "^1.2.0",
     "xlsx": "^0.17.1",
     "yup": "^0.32.9"
   },
