--- a/final-projects/matheus/package.json
+++ b/final-projects/matheus/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "swagger-autogen": "node ./src/services/swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,8 @@
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.5",
     "nodemon": "^2.0.12",
+    "swagger-autogen": "^2.11.2",
+    "swagger-ui-express": "^4.1.6",
     "yup": "^0.32.9"
   }
 }
