--- a/final-projects/lucas-barbosa/.env.sample
+++ b/final-projects/lucas-barbosa/.env.sample
@@ -1,3 +1,3 @@
-SERVER=
-MONGODB=
-SECRET=
+SERVER=3000
+MONGODB=mongodb+srv://admin:admin123@cluster0.ilvrt.mongodb.net/flatfile?retryWrites=true&w=majority
+SECRET=finalproject
