--- a/final-projects/matheus/.env.semple
+++ b/final-projects/matheus/.env.semple
@@ -1,3 +1,3 @@
-DB
-SECRET
-DOOR
+DB=mongodb+srv://dungeon:dungeon@cluster0.qzotv.mongodb.net/finalProject?retryWrites=true&w=majority
+DOOR=3030
+SECRET=GoodSaveTheQueen
